lab1/Test/L1-A-6-3.output
Error Type B at Line 2
Error Type B at Line 3
Error Type B at Line 13
Error Type A at Line 33
Error Type A at Line 33
Error Type B at Line 34
Error Type B at Line 34
Error Type B at Line 37
Error Type B at Line 39
Error Type B at Line 42
Error Type B at Line 43
