lab1/Test/L1-A-6-3.cmm
int DyJY7W0HzAOxvc73 ( struct EYnNUnn {
  int lQKh84ALJO8Gu  ;
}ZpsMh7cNFXl , int QvvvNQny [ 1444587861 ] {
  tx4WrF9fM5qt1QDGJ ( ) / ! b4aiNNv * ! e6Nq_h6lU8BjR3 
    >= - jRZTNp3u * UFm * bY3GTyNc + QTrVQ71FrX27AkSpHik 
    + jQsU_zD6j6m7WK56Gi - _1u - zyUxz4 > - SJAX5dkhTjXEqZ0za 
    / zIpqEI7clNw / o8xQAnS9SWicx - gvdq >= ! jGgjxOfmcyd36t 
    / J * KAL7IBI * mBv31Ip0P * geH2 * Hrtbl / EbhjijbMnh 
    * fe * tnH1unGB == - gYjc4EfgqAX * Q8gK / GmgvdoZxRksvGngP7jRP 
    / FR8iY3tm3n9 - EkKV2jEwFw5Qx7W + Ku765eg5mBc4_ && 
    ! XTKUFw3Mn * Zkz * ekh1kC6XYomjMimaku / U6cBekhKhdTA04wUt 
    + t == Eo85BpeGMvf9 <= ePbmYbhJRbhiTI65 > EfQhptjfwsK 
    >= > Dbkka5 == OGmKSFtplOe2fjFe != IBhPbLanuR58WMSdZY 
    < BomtUKR > fyoVTTPeSVspgXd <= lrces < waqOCbI && 
    - hCb5GoDOrwH6y9gnI * l35SeCm_JstvkGAiEW68 * A / R 
    + GaaxYHNn < _Skr8Wdse2yZPkJFYgiE > zTQVVviYq_H <= 
    pOXut1gXYZX2 >= K2C != EScg0_YgihdSAd4R <= GLtcptSh7jBjb245dQe 
    >= dYlW_25Jkj_Rr == n7gRbS1PBwo4C > hoqHkG > XGiIbXbsMcT 
    >= YABeOnP >= fr_aBMULeHp6qk < WR2W4OGj2PYnXNit4XPa 
    >= NgY9FUnHmXW != FqrjPvk_6G == Y9UdHAa < V3XlOB6oc 
    && - febl / vNHymHk_HQ7WyZ / WmMCJNWHxviIuBV * UM9XNcGip 
    * Mnxw1 / eaXKO < yFomUdE != DdPOA8Oq9 < xlEo1udk3qjPWoOAC 
    == aFfaRqgP5wNswtc0dA < i && Th9Qs8xcTWEWA9TdyUXQ 
    ( ) && - zQBbUsicSW * AE / FaB2Ce3f2_HlaS / Yb6b6eg2ht 
    * rbP06CulnJXR / bMElILrOU7ih6fpJIeLZ != uGnn5 > vE0er 
    && E ( t8hfgkR ) * H0LevyCMrw / _LCpvCXNHT / RC - 
    ws6zYBGYAr54EI + ys + JMAvm >= OJnbLIFj98ViHnOjnL 
    != tGPa8CMF8ZxYLwTz != f != ip2ZXb5Zlx9dkPbuEL != 
    RD_ > zjckBn4YSamZJkcfRe0 == zBjL7oJJbVScVgUcfVRv 
    == kbOqI2_0FaunU < pb9B < KFJh7M || ( HKnYsQvKvwrIrKtNmGSU 
    ) - JmfKJNPfw < PPdUn5 < AZHFHT == pDszU9yHhHWFBf 
    && LbMmGz ;
  if ( %JLR_rSb_iioA4w3 )   K8st1tAmH_wz #;
else   if O )   CDjBsWkG ;/ 


  return U < ;
}
int kd [ 1600420254 ] , [ 1332109095 ] 

;
;
! 